Fixed color picker overflow #177593333583985

--- a/public/sources/attributes/color/css/styles.less
+++ b/public/sources/attributes/color/css/styles.less
@@ -2,6 +2,10 @@
   cursor: pointer;
 }
 
+.vcv-ui-sketch-picker {
+  display: inline-block;
+}
+
 .vcv-ui-form-dropdown-color--value {
   border-radius: 3px;
   height: 100%;
